Fix spinner appearance in dark mode

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -123,6 +123,7 @@ button {
 .spinner {
   height: 20px;
   width: 20px;
+  filter: brightness(var(--is-dark-theme));
 }
 
 .text-red {
